knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/Corporate_Entity_Holding__c.object-meta.xml
<CustomObject>
    <label>Corporate Entity - Holding</label>
    <nameField>
        <displayFormat>CE(A)-{000000}</displayFormat>
        <label>Shareholder/ Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Entity - Holding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>