knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>Certificate_No__c</fullName>
    <label>Certificate No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>