knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reason__c</fullName>
    <label>Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Dividend</fullName>
            </value>
            <value>
                <fullName>Exercise</fullName>
            </value>
            <value>
                <fullName>Original Issue</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>