knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Issued_Shares__c.field-meta.xml
<CustomField>
    <fullName>Issued_Shares__c</fullName>
    <label>Issued Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>