knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Membership_Interest__c.field-meta.xml
<CustomField>
    <fullName>Membership_Interest__c</fullName>
    <label>Membership Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>