knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Outstanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstanding</label>
    <type>Checkbox</type>
</CustomField>