knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Share_Class__c.field-meta.xml
<CustomField>
    <fullName>Share_Class__c</fullName>
    <label>Share Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Limited Partner</fullName>
            </value>
            <value>
                <fullName>General Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>