knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Shareholder_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Member_Name__c</fullName>
    <label>Shareholder/ Member Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>