knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/fields/Subscription_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contribution__c</fullName>
    <label>Subscription/Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>