knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Holding__c/recordTypes/Corporate_Entity_Holding_Detail.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Entity_Holding_Detail</fullName>
    <active>true</active>
    <label>Corporate Entity - Holding Detail</label>
</RecordType>